# quaco-app-digital-workforce

./: .gitignore  Dockerfile  Dockerfile.worker  dallas_test_result.json  fly.api.toml  fly.worker.toml  main.py  pyproject.toml  run_pipeline_test.py  test_atlanta.py  test_dallas.py
.github/workflows/: deploy.yml
.playwright-mcp/: page-2026-04-27T09-14-02-426Z.yml  page-2026-04-27T09-14-25-716Z.yml  page-2026-04-27T09-14-47-903Z.yml  page-2026-04-27T09-14-57-361Z.yml  page-2026-04-27T09-15-06-859Z.yml  page-2026-04-27T09-15-19-294Z.yml  page-2026-04-27T09-38-39-958Z.yml  page-2026-04-27T09-39-11-352Z.yml  page-2026-04-27T09-46-01-740Z.yml  page-2026-04-27T09-46-31-455Z.yml  page-2026-04-27T09-46-54-342Z.yml  page-2026-04-27T09-48-27-191Z.yml  page-2026-04-27T10-23-50-306Z.yml  page-2026-04-27T10-25-27-207Z.yml
src/agents/: contract.py  deal_analysis.py  hermes.py  lead_ingestion.py  negotiation.py  skip_trace.py
src/api/: deps.py  main.py
src/core/: config.py  database.py  exceptions.py  logging.py
src/db/: schema.sql
src/models/: __init__.py  buy_box.py  campaign.py  contact.py  contract.py  deal.py  lead.py  message.py
src/repositories/: __init__.py  campaigns.py  contacts.py  contracts.py  deals.py  leads.py  messages.py
src/services/: acquisition_pipeline.py  pipeline.py  telnyx_poller.py
src/tools/: apify_tools.py  county_scraper.py  email_tools.py  fema_checker.py  lumin_tools.py  offer_calculator.py  photo_analyzer.py  sms_router.py  telenyx_tools.py  twilio_tools.py  zillow_comps.py
src/workers/: tasks.py  (+1 more)
web/: .gitignore  capacitor.config.ts
(+90 files in other folders)
